--- a/html/index.html
+++ b/html/index.html
@@ -278,8 +278,8 @@
         </div>
         <div class="main">
           <div class="bg">
-            <img src="images/bg.png" alt="">
-            <img src="images/bgm.png" alt="">
+            <img src="images/bg.webp" alt="">
+            <img src="images/bgm.webp" alt="">
           </div>
           <div class="inner">
             <div class="text1">
