--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="ロート製薬の新ヘアケアブランド「PRORY」誕生。9月2日より発売開始！">
+  <meta property="og:title" content="ヘアケアブランド「PRORY」" />
+  <meta property="og:description" content="ロート製薬の新ヘアケアブランド「PRORY」誕生。9月2日より発売開始！" />
+  <meta property="og:site_name" content="ロート製薬オンライン【公式】" />
+  <meta property="og:image" content="/images/ogp.jpg" />
   <title>PRORY | ロート製薬オンライン【公式】</title>
   <style>
     *:where(:not(iframe, canvas, img, svg, video):not(svg *)){
@@ -118,10 +123,19 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          padding-top: 8rem;
+          box-sizing: border-box;
+          @media (max-height: 50rem){
+            padding-top: 0;
+          }
           @media (max-width: 40rem){
             justify-content: center;
             width: 100%;
             height: 100%;
+            padding-top: calc(100cqw / 750 * 300);
+            @media (max-height: 50rem){
+              padding-top: 0;
+            }
           }
 
         }
@@ -142,9 +156,12 @@
           }
           & svg {
             display: block;
-            height: 2.3125rem;
+            height: 3.5rem;
             width: auto;
             animation: blur-in 1s 4s both;
+            @media (max-width: 60rem){
+              height: 2.3125rem;
+            }
             @media (max-width: 40rem){
               height: calc(100cqw / 750 * 40.37);
             }
@@ -161,15 +178,21 @@
           }
         }
         .logo {
-          margin-top: 2rem;
+          margin-top: 3rem;
+          @media (max-width: 40rem){
+            margin-top: 2rem;
+          }
           @media (max-width: 40rem){
             margin-top: calc(100cqw / 750 * 40);
           }
           & svg {
             display: block;
-            height: 6.375rem;
+            height: 10rem;
             width: auto;
             overflow: visible;
+            @media (max-width: 60rem){
+              height: 6.375rem;
+            }
             @media (max-width: 40rem){
               height: calc(100cqw / 750 * 100);
             }
@@ -194,15 +217,21 @@
           }
         }
         .text2 {
-          margin-top: 3.4375rem;
+          margin-top: 4.5rem;
+          @media (max-width: 60rem){
+            margin-top: 3.4375rem;
+          }
           @media (max-width: 40rem){
             margin-top: calc(100cqw / 750 * 86);
           }
           & svg {
             display: block;
-            height: 2.4375rem;
+            height: 3rem;
             width: auto;
             animation: fade-in 1s 5.5s both;
+            @media (max-width: 60rem){
+              height: 2.4375rem;
+            }
             @media (max-width: 40rem){
               height: calc(100cqw / 750 * 144);
             }
@@ -226,9 +255,12 @@
           }
           & svg {
             display: block;
-            height: 1.3125rem;
+            height: 1.5625rem;
             width: auto;
             animation: fade-in 1s 5.5s both;
+            @media (max-width: 60rem){
+              height: 1.3125rem;
+            }
             @media (max-width: 40rem){
               height: calc(100cqw / 750 * 31);
             }
@@ -251,13 +283,21 @@
             height: calc(100cqw / 750 * 90);
           }
         }
+        @keyframes fade-in2 {
+          from {
+            opacity: 0;
+          }
+          to {
+            opacity: 0.7;
+          }
+        }
         .text4 {
           font-size: 0.6875rem;
           line-height: normal;
           font-weight: 300;
           color: white;
           margin-top: 2rem;
-          animation: fade-in 1s 5.5s both;
+          animation: fade-in2 1s 5.5s both;
           @media (max-width: 40rem){
             font-size: calc(100cqw / 750 * 20);
             line-height: normal;
