--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="ヘアケアブランド「PRORY」" />
   <meta property="og:description" content="ロート製薬の新ヘアケアブランド「PRORY」誕生。9月2日より発売開始！" />
   <meta property="og:site_name" content="ロート製薬オンライン【公式】" />
-  <meta property="og:image" content="/images/ogp.jpg" />
+  <meta property="og:image" content="/images/prory/ogp.jpg" />
   <title>PRORY | ロート製薬オンライン【公式】</title>
   <style>
     *:where(:not(iframe, canvas, img, svg, video):not(svg *)){
@@ -30,7 +30,7 @@
         .outer {
           position: relative;
           width: 100vw;
-          height: 100vh;
+          height: 100svh;
           container-type: inline-size;
         }
         @keyframes fadeout {
@@ -125,15 +125,15 @@
           align-items: center;
           padding-top: 8rem;
           box-sizing: border-box;
-          @media (max-height: 50rem){
-            padding-top: 0;
+          @media (max-height: 40rem){
+            padding-top: 4rem;
           }
           @media (max-width: 40rem){
             justify-content: center;
             width: 100%;
             height: 100%;
             padding-top: calc(100cqw / 750 * 300);
-            @media (max-height: 50rem){
+            @media (max-height: 40rem){
               padding-top: 0;
             }
           }
@@ -151,7 +151,7 @@
           @media (max-width: 40rem){
             padding-top: calc(100cqw / 750 * 150);
           }
-          @media (max-height: 60rem){
+          @media (max-height: 90rem){
             padding-top: 0;
           }
           & svg {
@@ -159,7 +159,7 @@
             height: 3.5rem;
             width: auto;
             animation: blur-in 1s 4s both;
-            @media (max-width: 60rem){
+            @media (max-width: 90rem){
               height: 2.3125rem;
             }
             @media (max-width: 40rem){
@@ -190,7 +190,7 @@
             height: 10rem;
             width: auto;
             overflow: visible;
-            @media (max-width: 60rem){
+            @media (max-width: 90rem){
               height: 6.375rem;
             }
             @media (max-width: 40rem){
@@ -218,7 +218,7 @@
         }
         .text2 {
           margin-top: 4.5rem;
-          @media (max-width: 60rem){
+          @media (max-width: 90rem){
             margin-top: 3.4375rem;
           }
           @media (max-width: 40rem){
@@ -229,7 +229,7 @@
             height: 3rem;
             width: auto;
             animation: fade-in 1s 5.5s both;
-            @media (max-width: 60rem){
+            @media (max-width: 90rem){
               height: 2.4375rem;
             }
             @media (max-width: 40rem){
@@ -258,7 +258,7 @@
             height: 1.5625rem;
             width: auto;
             animation: fade-in 1s 5.5s both;
-            @media (max-width: 60rem){
+            @media (max-width: 90rem){
               height: 1.3125rem;
             }
             @media (max-width: 40rem){
@@ -318,8 +318,8 @@
         </div>
         <div class="main">
           <div class="bg">
-            <img src="images/bg.webp" alt="">
-            <img src="images/bgm.webp" alt="">
+            <img src="images/prory/bg.webp" alt="">
+            <img src="images/prory/bgm.webp" alt="">
           </div>
           <div class="inner">
             <div class="text1">
